fix(coverage): try to get coverage on CI

--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "pretest": "NODE_ENV=test npm run drop:db && npm run create:db && npm run migrate:test",
     "test:local": "npm run pretest && npm run test:server",
     "test": "npm run pretest && npm run test:server && npm run test:client",
-    "test:client": "nyc --reporter=html --reporter=text jest -u --maxWorkers=4 && codecov",
+    "test:client": "jest -u --maxWorkers=4 --coverage && codecov",
     "test:server": "cross-env NODE_ENV=test nyc --reporter=html --reporter=text mocha --timeout 20000 --exit --require babel-core/register server/test/index.js",
     "test:dev:server": "cross-env NODE_ENV=test nyc --reporter=html --reporter=text mocha ./server/test/index.js --exit --require babel-node/register --reporter spec",
     "test:dev": "npm test && npm run coverage",
@@ -62,7 +62,7 @@
   },
   "jest": {
     "verbose": true,
-    "testRegex": "client/__tests__/.*\\.test\\.(js|jsx)$",
+    "testRegex": "/client/__tests__/.*\\.test\\.(js|jsx)$",
     "setupTestFrameworkScriptFile": "./client/__tests__/setup.js",
     "collectCoverage": true,
     "collectCoverageFrom": [
