fix(coverage): try to get coverage on CI

--- a/package.json
+++ b/package.json
@@ -85,6 +85,13 @@
     ],
     "testPathIgnorePatterns": [
       "/client/__tests__/__mocks__/"
+    ],
+    "coverageReporters": [
+      "json",
+      "html",
+      "text",
+      "lcov",
+      "clover"
     ]
   },
   "dependencies": {
