--- a/.travis.yml
+++ b/.travis.yml
@@ -22,5 +22,5 @@ script:
   - npm run test
   - codecov
 after_success:
-  - codeclimate-test-reporter < coverage/lcov.info
+  - codeclimate-test-reporter < cat ./coverage/lcov.info
   - npm run coverage
