fix(seed): add seed for centers and events

--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "test:dev": "npm test && npm run coverage",
     "webpack": "webpack --config webpack.dev.js --watch",
     "migrate": "sequelize db:migrate",
-    "seed": "sequelize db:seed",
+    "seed": "sequelize db:seed:all",
+    "undo:seed": "sequelize db:seed:undo:all",
     "drop:test": "sequelize db:migrate:undo:all --env test",
     "migrate:test": "sequelize db:migrate --env test",
     "drop:db": "sequelize db:drop boots_test --env test",
