--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "pretest": "NODE_ENV=test npm run drop:db && npm run create:db && npm run migrate:test",
     "test:local": "npm run pretest && npm run test:server",
     "test": "npm run test:server && npm run test:client",
-    "test:client": "jest -u --maxWorkers=4 && codecov",
+    "test:client": "jest -u --no-cache --maxWorkers=4 && codecov",
     "test:server": "cross-env NODE_ENV=test nyc --reporter=html --reporter=text mocha --timeout 20000 --exit --require babel-core/register server/test/index.js",
     "test:dev:server": "cross-env NODE_ENV=test nyc --reporter=html --reporter=text mocha ./server/test/index.js --exit --require babel-node/register --reporter spec",
     "test:dev": "npm test && npm run coverage",
@@ -63,7 +63,7 @@
     "testRegex": "/client/__tests__/.*\\.test\\.(js|jsx)$",
     "setupTestFrameworkScriptFile": "./client/__tests__/setup.js",
     "coverageDirectory": "./coverage/client",
-    "collectCoverage": false,
+    "collectCoverage": true,
     "collectCoverageFrom": [
       "client/src/**",
       "!client/src/index.jsx",
@@ -80,7 +80,7 @@
       "/client/src/actions/modalAction.js",
       "/client/src/actions/searchAction.js",
       "/client/src/actions/events-actions/index.js",
-      "/client/src/helpers/authCheck.js"
+      "/client/src/helpers/AuthCheck.js"
     ],
     "testPathIgnorePatterns": [
       "/client/__tests__/__mocks__/"
@@ -137,7 +137,6 @@
     "node-sass": "^4.5.3",
     "nodemailer": "^4.5.0",
     "nodemon": "^1.12.1",
-    "nyc": "^11.2.1",
     "open-browser-webpack-plugin": "0.0.5",
     "pg": "^7.4.0",
     "pg-hstore": "^2.3.2",
@@ -187,11 +186,14 @@
     "eslint-plugin-react": "^7.6.1",
     "expect": "^21.2.1",
     "faker": "^4.1.0",
-    "jest": "^22.4.0",
+    "istanbul": "^0.4.5",
+    "jest": "^21.2.1",
     "jsdom": "^11.11.0",
     "mocha": "^4.0.1",
     "mocha-lcov-reporter": "^1.3.0",
     "moxios": "^0.4.0",
+    "nyc": "^11.1.0",
+    "raf": "^3.4.0",
     "react-router-enzyme-context": "^1.2.0",
     "react-test-renderer": "^16.2.0",
     "redux-mock-store": "^1.5.1",
