--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "pretest": "NODE_ENV=test npm run drop:db && npm run create:db && npm run migrate:test",
     "test:local": "npm run pretest && npm run test:server",
     "test": "npm run test:server && npm run test:client",
-    "test:client": "jest -u --no-cache --maxWorkers=4 && codecov",
+    "test:client": "jest -u --maxWorkers=4 && codecov",
     "test:server": "cross-env NODE_ENV=test nyc --reporter=html --reporter=text mocha --timeout 20000 --exit --require babel-core/register server/test/index.js",
     "test:dev:server": "cross-env NODE_ENV=test nyc --reporter=html --reporter=text mocha ./server/test/index.js --exit --require babel-node/register --reporter spec",
     "test:dev": "npm test && npm run coverage",
@@ -188,12 +188,11 @@
     "faker": "^4.1.0",
     "istanbul": "^0.4.5",
     "jest": "^21.2.1",
+    "nyc": "^11.1.0",
     "jsdom": "^11.11.0",
     "mocha": "^4.0.1",
     "mocha-lcov-reporter": "^1.3.0",
     "moxios": "^0.4.0",
-    "nyc": "^11.1.0",
-    "raf": "^3.4.0",
     "react-router-enzyme-context": "^1.2.0",
     "react-test-renderer": "^16.2.0",
     "redux-mock-store": "^1.5.1",
