--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,7 @@ language: node_js
 node_js:
   - 9
   - 6
-cache:
-  directories:
-  - node_modules
+cache: false
 addons:
 - postgresql: "9.4"
 env:
