--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 /node_modules/*
+.vscode/*
 /coverage/
-/.idea/
+.idea/*
 /.nyc_output/
 /.env
 /.github/
@@ -14,3 +15,4 @@
 package-lock.json
 reports/
 selenium-debug.log
+.DS_Store
