--- a/.travis.yml
+++ b/.travis.yml
@@ -18,5 +18,6 @@ script:
   - npm run test
 after_success:
   - CODECLIMATE_REPO_TOKEN=$CODECLIMATE_REPO_TOKEN codeclimate-test-reporter < cat ./coverage/lcov.info
+  - CODECOV_TOKEN=$CODECOV_TOKEN
   - npm run coverage
   
