chore(code-coverage): add codecov command to travis.yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -20,4 +20,5 @@ after_success:
   - CODECLIMATE_REPO_TOKEN=$CODECLIMATE_REPO_TOKEN codeclimate-test-reporter < cat ./coverage/lcov.info
   - CODECOV_TOKEN=$CODECOV_TOKEN
   - npm run coverage
+  - codecov
   
