--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
     "coveralls": "nyc --reporter=lcov --reporter=text-lcov npm test",
     "pretest": "NODE_ENV=test npm run drop:db && npm run create:db && npm run migrate:test",
     "test:local": "npm run pretest && npm run test:server",
-    "test": "npm run test:server && npm run test:client",
-    "test:client": "jest -u --maxWorkers=4 && codecov -t 911c9d3c-a567-4ce0-a32c-9a715830f02e",
+    "test": "npm run test:client && npm run test:server",
+    "test:client": "jest -u --maxWorkers=4 && codecov",
     "test:server": "cross-env NODE_ENV=test nyc --reporter=html --reporter=text mocha --timeout 20000 --exit --require babel-core/register server/test/index.js",
     "test:dev:server": "cross-env NODE_ENV=test nyc --reporter=html --reporter=text mocha ./server/test/index.js --exit --require babel-node/register --reporter spec",
     "test:dev": "npm test && npm run coverage",
