--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "pretest": "NODE_ENV=test npm run drop:db && npm run create:db && npm run migrate:test",
     "test:local": "npm run pretest && npm run test:server",
     "test": "npm run test:client && npm run test:server",
-    "test:client": "nyc --reporter=html --reporter=text jest",
-    "test:server": "cross-env NODE_ENV=test nyc --reporter=html --reporter=text mocha --timeout 20000 --exit --require babel-core/register server/test/index.js && codecov",
+    "test:client": "jest && codecov",
+    "test:server": "cross-env NODE_ENV=test nyc --reporter=html --reporter=text mocha --timeout 20000 --exit --require babel-core/register server/test/index.js",
     "test:dev:server": "cross-env NODE_ENV=test nyc --reporter=html --reporter=text mocha ./server/test/index.js --exit --require babel-node/register --reporter spec",
     "test:dev": "npm test && npm run coverage",
     "webpack": "webpack --config webpack.dev.js --watch",
@@ -33,15 +33,13 @@
     "e2e": "nightwatch"
   },
   "nyc": {
-    "include": ["client/src/**"],
     "exclude": [
-      "client/src/registerServiceWorker.js",
-      "client/src/rootReducer.js",
-      "client/src/util/",
-      "client/src/actions/modalAction.js",
-      "client/src/actions/searchAction.js",
-      "client/src/actions/events-actions/index.js",
-      "client/src/helpers/AuthCheck.js"
+      "server/middleware/imageUploader.js",
+      "server/middleware/mailer.js",
+      "server/models/**",
+      "server/controllers/**",
+      "server/app.js",
+      "server/routes/administrator.js"
     ],
     "sourceMap": true
   },
@@ -64,7 +62,6 @@
     "verbose": false,
     "testRegex": "./client/__tests__/.*\\.test\\.(js|jsx)$",
     "setupTestFrameworkScriptFile": "./client/__tests__/setup.js",
-    "collectCoverage": true,
     "collectCoverageFrom": [
       "client/src/**",
       "!client/src/index.jsx",
@@ -75,8 +72,8 @@
       "node_modules/",
       "server/",
       "build/",
-      "client/src/rootReducer.js",
       "client/src/registerServiceWorker.js",
+      "client/src/rootReducer.js",
       "client/src/util/",
       "client/src/actions/modalAction.js",
       "client/src/actions/searchAction.js",
