chore(codecov): use nyc for both client

--- a/.gitignore
+++ b/.gitignore
@@ -7,10 +7,10 @@ coverage/
 /.github/
 /build/
 /npm-debug.log*
-./client/bower_components
-./client/public/js/hot/*
-./client/public/js/app.bundle.js
-./client/public/js/app.bundle.js.map
+client/bower_components
+client/public/js/hot/*
+client/public/js/app.bundle.js
+client/public/js/app.bundle.js.map
 
 package-lock.json
 reports/
