--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -29,6 +29,7 @@
     "react/prefer-stateless-function": 0,
     "react/no-unused-prop-types": 0,
     "react/require-default-props": 0,
+    "react/jsx-closing-tag-location": 0,
     "import/no-named-as-default": 0,
     "import/no-named-as-default-member": 0,
     "import/prefer-default-export": 0,
