--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "pretest": "NODE_ENV=test npm run drop:db && npm run create:db && npm run migrate:test",
     "test:local": "npm run pretest && npm run test:server",
     "test": "npm run test:client && npm run test:server",
-    "test:client": "jest --maxWorkers=4 --coverage && codecov -t 911c9d3c-a567-4ce0-a32c-9a715830f02e",
+    "test:client": "jest client/__tests__/**/** --maxWorkers=4 && codecov --token=911c9d3c-a567-4ce0-a32c-9a715830f02e",
+    "test:client:local": "jest -u client/__tests__/**/** --watch",
     "test:server": "cross-env NODE_ENV=test nyc --reporter=html --reporter=text mocha --timeout 20000 --exit --require babel-core/register server/test/index.js",
     "test:dev:server": "cross-env NODE_ENV=test nyc --reporter=html --reporter=text mocha ./server/test/index.js --exit --require babel-node/register --reporter spec",
     "test:dev": "npm test && npm run coverage",
@@ -57,30 +58,29 @@
   },
   "jest": {
     "verbose": false,
-    "testRegex": "/client/__tests__/.*\\.test\\.(js|jsx)$",
-    "roots": ["client/__tests__/"],
-    "setupTestFrameworkScriptFile": "./client/__tests__/setup.js",
+    "testRegex": "client/__tests__/.*\\.test\\.(js|jsx)$",
+    "setupFiles": [
+      "<rootDir>/client/__tests__/setup.js"
+    ],
     "coverageDirectory": "./coverage/",
+    "collectCoverage": true,
     "collectCoverageFrom": [
-      "**/src/**",
-      "!client/src/index.jsx",
-      "!client/src/components/modals/centerModalForms/*.*",
-      "!client/src/components/modals/eventModalForm/*.*"
+      "client/src/**/*.{js,jsx}"
     ],
     "coveragePathIgnorePatterns": [
-      "/node_modules/",
-      "/server/",
-      "/build/",
-      "/client/src/registerServiceWorker.js",
-      "/client/src/rootReducer.js",
-      "/client/src/util/",
-      "/client/src/actions/modalAction.js",
-      "/client/src/actions/searchAction.js",
-      "/client/src/actions/events-actions/index.js",
-      "/client/src/helpers/AuthCheck.js"
+      "<rootDir>/client/src/index.jsx",
+      "<rootDir>/client/src/registerServiceWorker.js",
+      "<rootDir>/client/src/rootReducer.js",
+      "<rootDir>/client/src/util/",
+      "<rootDir>/client/src/components/modals/centerModalForms/*.*",
+      "<rootDir>/client/src/components/modals/eventModalForm/*.*",
+      "<rootDir>/client/src/actions/modalAction.js",
+      "<rootDir>/client/src/actions/searchAction.js",
+      "<rootDir>/client/src/actions/events-actions/index.js",
+      "<rootDir>/client/src/helpers/AuthCheck.js"
     ],
     "testPathIgnorePatterns": [
-      "/client/__tests__/__mocks__/"
+      "<rootDir>/client/__tests__/__mocks__/"
     ]
   },
   "dependencies": {
@@ -183,13 +183,13 @@
     "eslint-plugin-react": "^7.6.1",
     "expect": "^21.2.1",
     "faker": "^4.1.0",
-    "istanbul": "^0.4.5",
-    "jest": "^21.2.1",
-    "nyc": "^11.1.0",
+    "jest": "^23.1.0",
     "jsdom": "^11.11.0",
     "mocha": "^4.0.1",
     "mocha-lcov-reporter": "^1.3.0",
     "moxios": "^0.4.0",
+    "nyc": "^12.0.2",
+    "raf": "^3.4.0",
     "react-router-enzyme-context": "^1.2.0",
     "react-test-renderer": "^16.2.0",
     "redux-mock-store": "^1.5.1",
