--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "pretest": "NODE_ENV=test npm run drop:db && npm run create:db && npm run migrate:test",
     "test:local": "npm run pretest && npm run test:server",
     "test": "npm run test:client && npm run test:server",
-    "test:client": "jest client/__tests__/**/** --maxWorkers=4",
+    "test:client": "jest -u client/__tests__/**/** --maxWorkers=4",
     "test:client:local": "jest -u client/__tests__/**/** --watch",
     "test:server": "cross-env NODE_ENV=test nyc --reporter=html --reporter=text mocha --timeout 20000 --exit --require babel-core/register server/test/index.js",
     "test:dev:server": "cross-env NODE_ENV=test nyc --reporter=html --reporter=text mocha ./server/test/index.js --exit --require babel-node/register --reporter spec",
